plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.9'
	id 'io.spring.dependency-management' version '1.1.7'

	id 'com.diffplug.spotless' version '6.25.0'
}


group = 'com.example'
version = '0.0.1-SNAPSHOT'
description = 'back-end for picknwhip'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // Swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.15'
    // Spatial 기능 추가 (Point 타입 사용을 위해)
    implementation 'org.hibernate.orm:hibernate-spatial'
	runtimeOnly 'com.h2database:h2'

    // AWS SDK v2 (S3)
    implementation platform('software.amazon.awssdk:bom:2.41.10')
    implementation 'software.amazon.awssdk:s3'

	// 보안
	implementation 'org.springframework.boot:spring-boot-starter-security'
	// 카카오 로그인
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	// WebSocket
	implementation 'org.springframework.boot:spring-boot-starter-websocket'

    // flyway
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.flywaydb:flyway-mysql'

	// JWT
	implementation platform('io.jsonwebtoken:jjwt-bom:0.13.0')
	implementation 'io.jsonwebtoken:jjwt-api'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson'

    // QueryDSL : OpenFeign
    implementation "io.github.openfeign.querydsl:querydsl-jpa:7.0"
    implementation "io.github.openfeign.querydsl:querydsl-core:7.0"
    annotationProcessor "io.github.openfeign.querydsl:querydsl-apt:7.0:jpa"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
}

tasks.named('test') {
	useJUnitPlatform()
}

spotless {
	java {
		// Google Java Format 적용
		googleJavaFormat()
		removeUnusedImports()
		trimTrailingWhitespace()
		endWithNewline()

		targetExclude 'build/**'
	}
}

// 기본 test는 mysql 태그 제외 + mysqlTest 태스크 추가
tasks.test {
    useJUnitPlatform {
        excludeTags "mysql"
    }
}

tasks.register("mysqlTest", Test) {
    useJUnitPlatform {
        includeTags "mysql"
    }
}

// QueryDSL 관련 설정
// generated/querydsl 폴더 생성 & 삽입
def querydslDir = layout.buildDirectory.dir("generated/querydsl").get().asFile

// 소스 세트에 생성 경로 추가 (구체적인 경로 지정)
sourceSets {
    main.java.srcDirs += [ querydslDir ]
}

// 컴파일 시 생성 경로 지정
tasks.withType(JavaCompile).configureEach {
    options.generatedSourceOutputDirectory.set(querydslDir)
}

// clean 태스크에 생성 폴더 삭제 로직 추가
clean.doLast {
    file(querydslDir).deleteDir()
}